test/sema/assignment-of-invalid-type.delta.output
assignment-of-invalid-type.delta:6:7: error: cannot assign 'int' to 'bool'
    b = 1;
      ^
