test/sema/assignment-of-invalid-type.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var b = false;
    // CHECK: [[@LINE+1]]:7: error: cannot assign 'int' to 'bool'
    b = 1;
}
